--- a/Vigilance.External.Utilities/Vigilance.External.Utilities/Vigilance.External.Utilities.csproj
+++ b/Vigilance.External.Utilities/Vigilance.External.Utilities/Vigilance.External.Utilities.csproj
@@ -34,16 +34,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\..\..\References\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>..\..\..\..\References\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp_publicized">
-      <HintPath>..\..\..\References\Assembly-CSharp_publicized.dll</HintPath>
+      <HintPath>..\..\..\..\References\Assembly-CSharp_publicized.dll</HintPath>
     </Reference>
     <Reference Include="Mirror_publicized">
-      <HintPath>..\..\..\References\Mirror_publicized.dll</HintPath>
+      <HintPath>..\..\..\..\References\Mirror_publicized.dll</HintPath>
     </Reference>
     <Reference Include="NorthwoodLib">
-      <HintPath>..\..\..\References\NorthwoodLib.dll</HintPath>
+      <HintPath>..\..\..\..\References\NorthwoodLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,19 +54,19 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\References\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\..\..\..\References\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>..\..\..\References\UnityEngine.PhysicsModule.dll</HintPath>
+      <HintPath>..\..\..\..\References\UnityEngine.PhysicsModule.dll</HintPath>
     </Reference>
     <Reference Include="Vigilance">
-      <HintPath>..\..\..\References\Vigilance.dll</HintPath>
+      <HintPath>..\..\..\..\References\Vigilance.dll</HintPath>
     </Reference>
     <Reference Include="Vigilance.External.Extensions">
-      <HintPath>..\..\..\References\Vigilance.External.Extensions.dll</HintPath>
+      <HintPath>..\..\..\..\References\Vigilance.External.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Vigilance.External.Patching">
-      <HintPath>..\..\..\References\Vigilance.External.Patching.dll</HintPath>
+      <HintPath>..\..\..\..\References\Vigilance.External.Patching.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
